test/langtools/tools/javac/superInit/SuperInitBad11.out
SuperInitBad11.java:11:17: compiler.err.cant.ref.before.ctor.called: super
1 error
